Fix CSRF issue for Django admin
- Added CSRF_TRUSTED_ORIGINS to environment variables
- Configured Django settings to use CSRF trusted origins from env
- Includes all local and production domains

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,6 +16,9 @@ REFRESH_TOKEN_LIFETIME=1440
 # CORS settings (comma-separated)
 CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:6371,http://localhost:5173,https://crm.primearabiagroup.com
 
+# CSRF Trusted Origins (comma-separated, for Django admin)
+CSRF_TRUSTED_ORIGINS=http://localhost:6370,http://localhost:6371,http://localhost:3000,https://backend.primearabiagroup.com,https://crm.primearabiagroup.com
+
 # Production URLs
 FRONTEND_URL=https://crm.primearabiagroup.com
 BACKEND_URL=https://backend.primearabiagroup.com
